# qly-android

./: .gitignore  CHANGES.md  README.md  build.gradle  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/assets/: logback.xml
app/src/androidTest/java/com/rex/qly/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: logback.xml
app/src/main/assets/www/: capture.html  index.html
app/src/main/cpp/: CMakeLists.txt  debug.cpp  debug.h  ffmpeg_jni.cpp  logging.h  nalu.cpp  nalu.h  nalu.test.cpp  rtmp_jni.cpp
app/src/main/java/com/rex/qly/: App.java  AppNotifier.java  AppService.java  FFmpeg.java  FirstFragment.java  MainActivity.java  MainAddrAdapter.java  MainFragment.java  MediaProjectionRequestActivity.java  Rtmp.java  SecondFragment.java  WsServer.java
app/src/main/java/com/rex/qly/network/: NetworkAddressDiscover.java  NetworkHelper.java
app/src/main/java/com/rex/qly/preference/: FragmentSetting.java  PreferenceViewActivity.java  Prefs.java
app/src/main/java/com/rex/qly/record/: OutputCallbackFFmpeg.java  (+3 more)
app/src/main/res/drawable/: ic_failed_24dp.xml  ic_process_24dp.xml  ic_success_24dp.xml
app/src/main/res/layout/: activity_main.xml  activity_preference.xml  fragment_main.xml  fragment_main_addr_item.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: arrays.xml  strings.xml  styles.xml
app/src/main/res/values-w820dp/: dimens.xml
app/src/main/res/xml/: preference_settings.xml
app/src/test/java/com/rex/qly/: ExampleUnitTest.java
app/src/test/resources/: logback.xml
(+5 files in other folders)
